--- a/src/Busybee/PersonBundle/Resources/views/Person/phoneProtoType.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/phoneProtoType.html.twig
@@ -1,15 +1,15 @@
-<div class="well phoneNumber">
-    <div class="row">
-        <div class="col-sm-6">
-            {{ form_row(form.phone.vars.prototype.phoneType|e) }}
-        </div>
-        <div class="col-sm-6">
-            {{ form_row(form.phone.vars.prototype.countryCode|e) }}
-        </div>
+{% trans_default_domain "BusybeePersonBundle" %}
+<div class="row">
+    <div class="col-sm-6">
+        {{ form_row(form.phone.vars.prototype.phoneType|e) }}
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            {{ form_row(form.phone.vars.prototype.phoneNumber|e) }}
-        </div>
+    <div class="col-sm-6">
+        {{ form_row(form.phone.vars.prototype.countryCode|e) }}
     </div>
+</div>
+<div class="row">
+    <div class="col-sm-10">
+        {{ form_row(form.phone.vars.prototype.phoneNumber|e) }}
+    </div>
+    <div class="col-sm-2" id="phoneNumber"></div>
 </div>
