--- a/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 	<script src="{{ asset('js/jquery-ui.min.js') }}"></script>
-    <script>
+    <script type="text/javascript">
         $(".addPersonAddress").click(function(e){
 
             window.open("{{ path('address_manage', {'id': 'Add'}) }}","Address","width=820,height=600");
@@ -92,6 +92,7 @@
                     $("#person_address2_list").val(label2)
                 }
             });
+
         });
 
         $("#erasePersonAddress1").click(function() {
@@ -112,56 +113,13 @@
             $("#person_address2_list").val("");
         } );
 
-        $('#addPhoneButton').click(function(e) {
-
-            e.preventDefault();
-
-            var $collectionHolder  = $('.phoneNumberList');
-
-            $collectionHolder.data('index', $collectionHolder.find('.phoneNumber').length);
-
-            var index = $collectionHolder.data('index');
-
-            var prototype = $collectionHolder.data('prototype');
-
-            var newForm = prototype.replace(/__name__/g, index);
-
-            $('.phoneNumberList').append(newForm);
-
-            $('#person_phone_' + index + '_phoneNumber').autocomplete({
-                source: '{{ path('phone_fetch') }}',
-                minLength: 4,
-                delay: 250,
-                focus: function(event, ui) {
-                    // prevent autocomplete from updating the textbox
-                    event.preventDefault();
-                    // manually update the textbox
-                    $(this).val(ui.item.label);
-                },
-                select: function(event, ui) {
-                    // prevent autocomplete from updating the textbox
-                    event.preventDefault();
-                    // manually update the textbox and hidden field
-                    $(this).val(ui.item.label);
-                }
-            });
-            $('#person_phone_' + index + '_phoneNumber').prop('readonly', false);
-
-            $collectionHolder.data('index', index + 1);
-
-            $('.deletePhoneButton').hide();
-
-
+        $(".phoneNumberList").collection({
+            'name_prefix': '{{ form.phone.vars.full_name }}',
+            'allow_up': false,
+            'allow_down': false,
+            'add': '<button title="{{ 'contact.phone.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+            'remove': '<button title="{{ 'contact.phone.delete'|trans}}" type="button" class="halflings halflings-remove-sign btn btn-warning" style="float: right;"></button>',
         });
-        $('#addPhoneForm').fadeOut(500);
 
-        $('.deletePhoneButton').click(function(e) {
-            e.preventDefault();
 
-            var id = $(this).attr('id');
-
-            $('#phone_' + id.substring(12)).remove();
-
-            $('#addPhoneButton').fadeOut(500);
-        });
     </script>
