--- a/src/Busybee/PersonBundle/Resources/views/Student/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Student/edit.html.twig
@@ -1,4 +1,4 @@
-{# src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig #}
+{# src/Busybee/PersonBundle/Resources/views/Student/edit.html.twig #}
 
 {% trans_default_domain "BusybeePersonBundle" %}
 
@@ -12,16 +12,16 @@
 {% endblock stylesheets %}
 
 
-{% block title %}{{ parent() }}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.people.title'|trans }}{% endif %}{% endblock title %}
-{% block headerTitle %}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.people.title'|trans }}{% endif %}{% endblock headerTitle %}
-{% block headerLead %}{% if id == 'Add' %}{{ 'person.people.description'|trans }}{% else %}{{ 'person.people.description'|trans }}{% endif %}{% endblock headerLead %}
+{% block title %}{{ parent() }}{% if id == 'Add' %}{{ 'student.title.add'|trans }}{% else %}{{ 'student.title.edit'|trans }}{% endif %}{% endblock title %}
+{% block headerTitle %}{% if id == 'Add' %}{{ 'student.title.add'|trans }}{% else %}{{ 'student.title.edit'|trans }}{% endif %}{% endblock headerTitle %}
+{% block headerLead %}{% if id == 'Add' %}{{ 'student.description'|trans }}{% else %}{{ 'student.description'|trans }}{% endif %}{% endblock headerLead %}
 
-{% set tabs = get_parameter('person') %}
+{% set tabs = get_parameter('student') %}
 
 {% block contentContainer %}
 {{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert") }}
 {{ form_start(form) }}
-<div id="personTabs">
+<div id="studentTabs">
 	<ul class="nav nav-tabs" role="tablist">
 		{% for name,tab in tabs %}
 			{% set translation = 'BusybeePersonBundle' %}
@@ -54,6 +54,6 @@
 	{{ parent() }}
     {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
-    {% include 'BusybeePersonBundle:Person:script.html.twig' %}
-    {% include 'BusybeeHomeBundle:Scripts:monitorForm.js.twig' with {'route': 'person_manage'} %}
+    {% include 'BusybeeHomeBundle:Scripts:monitorForm.js.twig' with {'route': 'student_manage'} %}
+    {% include 'BusybeeFormBundle:Scripts:tab-error.js.twig' %}
 {% endblock javascripts %}
