--- a/src/Busybee/PersonBundle/Resources/views/Form/phoneCollection.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Form/phoneCollection.html.twig
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-sm-3 collection-actions">
 				<span>
-					<button title="{{ 'contact.phone.delete'|trans}}" type="button" class="collection-remove collection-action halflings halflings-erase btn btn-danger" style="float: right;"></button>
+					<button title="{{ 'contact.phone.remove'|trans}}" type="button" class="collection-remove collection-action halflings halflings-erase btn btn-warning" style="float: right;"></button>
 					<button title="{{ 'contact.phone.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary collection-add collection-action" style="float: right;"></button>
 				</span>
 			</div>
