--- a/src/Busybee/FamilyBundle/Resources/views/Family/emergencyContactCollection.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/emergencyContactCollection.html.twig
@@ -9,7 +9,7 @@
 	<div class="well emergencyContact">
 		<div class="row">
 			<div class="col-sm-9">
-				{{ form_row(form.contact) }}
+				{{ form_row(form) }}
 			</div>
 			<div class="col-sm-3 collection-actions">
 				<span>
