--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -23,18 +23,17 @@
 		{% block titleContainer %}
 		<div class="jumbotron">
 			<img src="{{ asset(get_setting('Org.Logo', 'img/bee.png')) }}" alt="Busybee" id="bee-logo" />
-			<h1>{{ get_setting('Organisation.Name') }}</h1>
-			<h2>{% block headerTitle %}Busybee{% endblock headerTitle %}</h2>
+			<h2>{% block headerTitle %}Busybee - {{ get_setting('Org.Name') }}{% endblock headerTitle %}</h2>
 			<p class="lead">{% block headerLead %}Busybee{% endblock headerLead %}</p>
 		</div>
 		{% endblock titleContainer %}
 
 
 		<div class="container-fluid" id="contentContainer">
-		{% block contentContainer %}
 		{% block flashMessages %}
-        {% include 'BusybeeHomeBundle:Default:flash.html.twig' %}
+			{% include 'BusybeeHomeBundle:Default:flash.html.twig' %}
 		{% endblock flashMessages %}
+		{% block contentContainer %}
 
 		{{ include('BusybeeHomeBundle:Default:buttons.html.twig') }}
 	
@@ -68,7 +67,7 @@
 		</div>
     </div> <!-- /container -->
 
-    <div class="container theme-showcase" role="footer" id="footerContainer">
+    <div class="container theme-showcase" id="footerContainer">
 		{% block footerContainer %}
 			{{ include('BusybeeHomeBundle:Default:footer.html.twig') }}
 		{% endblock footerContainer %}
