--- a/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
+++ b/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
@@ -30,7 +30,22 @@
 
 {% block yesno_widget -%}
 	{%- set attr = attr|merge({class: (attr.class|default('') ~ ' yes-no form-control')|trim}) -%}
-	{%- set attr = attr|merge({"data-off-label": "false", "data-on-label": "false", "data-off-icon-cls": "glyphicons-thumbs-down", "data-on-icon-cls": "glyphicons-thumbs-up"}) -%}
+
+    {% if attribute(attr, "data-off-icon-cls") is not defined %}
+        {%- set attr = attr|merge({"data-off-icon-cls": "glyphicons-thumbs-down"}) -%}
+    {% endif %}
+
+    {% if attribute(attr, "data-on-icon-cls") is not defined %}
+        {%- set attr = attr|merge({"data-on-icon-cls": "glyphicons-thumbs-up"}) -%}
+    {% endif %}
+
+    {% if attribute(attr, "data-off-label") is not defined %}
+        {%- set attr = attr|merge({"data-off-label": "false"}) -%}
+    {% endif %}
+
+    {% if attribute(attr, "data-on-label") is not defined %}
+        {%- set attr = attr|merge({"data-on-label": "false"}) -%}
+    {% endif %}
 
 	<div class="yesno-right">
 		<input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
