--- a/src/Busybee/PersonBundle/Resources/views/Person/person.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/person.html.twig
@@ -40,7 +40,11 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-offset-8 col-sm-2 well">
+				<div class="col-sm-2 well">
+                    {{ form_row(form.staff) }}
+                    {{ form_row(form.staffQuestion) }}
+				</div>
+				<div class="col-sm-offset-6 col-sm-2 well">
 					{{ form_row(form.title) }}
 				</div>
 				<div class="col-sm-2 well">
